--- a/resources/ca/ontariotechu/csci2020u_project/Server.fxml
+++ b/resources/ca/ontariotechu/csci2020u_project/Server.fxml
@@ -5,12 +5,16 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" prefHeight="507.0" prefWidth="450.0" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17" fx:controller="ca.ontariotechu.csci2020u_project.Server_UI">
+<?import javafx.scene.control.Button?>
+<VBox alignment="CENTER" prefHeight="507.0" prefWidth="450.0"
+      spacing="20.0" xmlns:fx="http://javafx.com/fxml/1"
+      xmlns="http://javafx.com/javafx/17" fx:controller="ca.ontariotechu.csci2020u_project.ClientUiController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
    <children>
       <TextArea fx:id="txtArea" prefHeight="433.0" prefWidth="451.0" />
-      <TextField />
+      <TextField fx:id="chatMessage"/>
+       <Button fx:id="sendButton" onAction="#sendMessages"> send</Button>
    </children>
 </VBox>
