--- a/resources/ca/ontariotechu/csci2020u_project/Chat.fxml
+++ b/resources/ca/ontariotechu/csci2020u_project/Chat.fxml
@@ -1,24 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" prefHeight="507.0" prefWidth="450.0"
-      spacing="20.0" xmlns:fx="http://javafx.com/fxml/1"
-      xmlns="http://javafx.com/javafx/17" fx:controller="ca.ontariotechu.csci2020u_project.ClientUiController">
+<VBox alignment="CENTER" prefHeight="507.0" prefWidth="450.0" spacing="20.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ca.ontariotechu.csci2020u_project.ClientUiController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
    <children>
-       <TextField fx:id="ipAddressField" text="localhost"/>
-       <TextField fx:id="portField" text="6666"/>
-       <TextField fx:id="userNameField" promptText="user name"/>
-       <Button onAction="#connectServer">connect</Button>
       <TextArea fx:id="txtArea" prefHeight="433.0" prefWidth="451.0" />
-      <TextField fx:id="chatMessage"/>
+      <TextField fx:id="chatMessage" />
        <Button onAction="#sendMessages"> send</Button>
        <Button onAction="#handleExit">Exit</Button>
    </children>
