--- a/resources/ca/ontariotechu/csci2020u_project/Chat.fxml
+++ b/resources/ca/ontariotechu/csci2020u_project/Chat.fxml
@@ -1,26 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import javafx.geometry.Point3D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="557.0" prefWidth="450.0" spacing="20.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ca.ontariotechu.csci2020u_project.ClientUiController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-    </padding>
+<AnchorPane prefHeight="638.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ca.ontariotechu.csci2020u_project.ClientUiController">
    <children>
-      <Label fx:id="label" text="Welcome">
+      <Label fx:id="label" layoutX="194.0" layoutY="49.0" text="Welcome">
          <font>
             <Font size="15.0" />
          </font>
       </Label>
-      <TextArea fx:id="txtArea" prefHeight="433.0" prefWidth="451.0" />
-      <TextField fx:id="chatMessage" />
-       <Button onAction="#sendMessages" text="Send"> send</Button>
-       <Button onAction="#handleExit">Exit</Button>
+      <TextArea fx:id="txtArea" layoutX="9.0" layoutY="83.0" prefHeight="432.0" prefWidth="431.0" />
+      <TextField fx:id="chatMessage" layoutX="18.0" layoutY="527.0" prefHeight="26.0" prefWidth="413.0" />
+       <Button layoutX="172.0" layoutY="561.0" onAction="#sendMessages" prefHeight="26.0" prefWidth="104.0" text="Send"> send</Button>
+       <Button layoutX="208.0" layoutY="598.0" onAction="#handleExit" text="Exit">Exit</Button>
+      <MenuBar layoutX="-2.0" layoutY="1.0" prefHeight="22.0" prefWidth="450.0">
+        <menus>
+          <Menu mnemonicParsing="false" text="File">
+            <items>
+              <MenuItem mnemonicParsing="false" onAction="#saveChatLog" text="Save Chat Log" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
    </children>
-</VBox>
+   <rotationAxis>
+      <Point3D />
+   </rotationAxis>
+</AnchorPane>
